# contract-management

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
contract_management/: config.py  facts.py  main.py  utils.py
dashboards/: contract-management.pbip
dashboards/contract-management.Report/: .platform  definition.pbir  report.json
dashboards/contract-management.Report/.pbi/: localSettings.json
dashboards/contract-management.SemanticModel/: .platform  diagramLayout.json
dashboards/contract-management.SemanticModel/.pbi/: cache.abf  localSettings.json
dashboards/contract-management.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
dashboards/contract-management.SemanticModel/definition/tables/: %2AMedidas.tmdl  Atualizacao.tmdl  DateTableTemplate_a16c3c81-152b-4afb-9034-d26df0bd56e4.tmdl  LocalDateTable_03e926cc-6931-45fe-b9e0-836a301a11d2.tmdl  LocalDateTable_0968d325-5370-405a-8bf8-c4f44d29393a.tmdl  LocalDateTable_0ac64b58-4784-4bec-8fb1-8042af0ee9f6.tmdl  LocalDateTable_1db94e9d-dbce-401a-ba58-28442a9dd678.tmdl  LocalDateTable_2e89982c-0211-4c14-8751-528d8ea1f077.tmdl  LocalDateTable_351d4bb1-b0ed-4d3e-a97f-f78ac86d8685.tmdl  (+21 more)
data/raw/: Dim_Clientes.csv  Dim_Fornecedores.csv  Dim_Profissionais.csv  Dim_Tempo.csv  Dim_Tipo_Contrato.csv  Dim_Tipo_Pagamento.csv  Dim_Tipo_Violacao.csv  Fato_Contratos.csv  Fato_Pagamentos.csv  Fato_Violacoes.csv
docs/: installation_guide.md  project_overview.md
notebooks/: dados.ipynb
scripts/: config.py  dimensions.py
